@@ -1,3 +1,6 @@
+version 20080416_1
+Added the ability to create one way links easily
+
 version 20080401_3
 A link search will now show page *name* matches as well as "content"
 
